Plotting and regridding kernels

--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "| Concepts | Importance | Notes |\n",
     "| --- | --- | --- |\n",
-    "| Loading CMIP6 data | Necessary | |\n",
+    "| [Loading CMIP6 data with Intake-ESM](https://projectpythia.org/cmip6-cookbook/notebooks/foundations/intake-esm.html) | Helpful | |\n",
     "| [Intro to Xarray](https://foundations.projectpythia.org/core/xarray/xarray-intro.html) | Necessary |  |\n",
     "\n",
     "- **Time to learn**: 60 minutes"
@@ -67,6 +67,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import xesmf as xe\n",
     "import intake\n",
     "import s3fs\n",
     "import fsspec\n",
@@ -88,7 +89,9 @@
     "\n",
     "In this example, we will perform the analysis on a single model from the CMIP6 ensemble, CESM2. The simplest way to calculate feedbacks is to take differences between two climate states, as opposed to regressions. Here we use runs with:\n",
     "- preindustrial conditions (`piControl`) as the control climate\n",
-    "- instantaneously quadrupled CO$_2$ (`abrupt-4xCO2`) as the perturbed climate"
+    "- instantaneously quadrupled CO$_2$ (`abrupt-4xCO2`) as the perturbed climate\n",
+    "\n",
+    "We will use CMIP6 data hosted on Pangeo's Google Cloud Storage:"
    ]
   },
   {
@@ -200,13 +203,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataKern = xr.open_dataset(filesetKern[0])\n",
-    "dataKern"
+    "As we will see in a moment, the naming convention for months as calculated from Xarray's `.groupby()` method (\"month\", 1-12) is different from what is used in the kernel dataset (\"time\", 0-11), so we need to align them:"
    ]
   },
   {
@@ -214,7 +214,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_kern = xr.open_dataset(filesetKern[0])\n",
+    "data_kern['time'] = data_kern['time'] + 1\n",
+    "data_kern = data_kern.rename({'time': 'month'})\n",
+    "data_kern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a look at some of these kernels. First, the albedo kernel, annually averaged:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_kern.sw_a.mean(dim='month').plot.contourf(levels=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the LW water vapor kernel, annually and zonally averaged:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_kern.lw_q.mean(dim=['month', 'lon']).plot.contourf(levels=40, yincrease=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get a general idea of how the climate changes in these runs, we can plot the global mean surface temperature for the two runs:"
+    "To get a general idea of how the climate changes in these runs, we can plot the (12-month rolling) global mean surface temperature for the two runs:"
    ]
   },
   {
@@ -264,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmst_ctrl.sel(time=slice('0001', '0101')).plot()"
+    "gmst_ctrl.sel(time=slice('1150', '1200')).plot()"
    ]
   },
   {
@@ -282,14 +319,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmst_pert.sel(time=slice('0001', '0101')).plot()"
+    "gmst_pert.sel(time=slice('0949', '0999')).plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ideally, we would want to compare two equilibrated climates, but since that is usually not possible with standard-length CMIP experiments, we will simply take the average over the last 100 years available for each run:"
+    "### Calculating the two climate states\n",
+    "\n",
+    "Ideally, we would want to compare two equilibrated climates, but since that is usually not possible with standard-length CMIP experiments, we will simply use the monthly climatology over the last 50 years available for each run, which is close enough to equilibrium. The pressure coordinates are also in Pa, so let's convert them to hPa to match the kernels:"
    ]
   },
   {
@@ -298,8 +337,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl_state = ctrl.sel(time=slice('1100', '1200')).mean(dim='time')\n",
-    "pert_state = pert.sel(time=slice('0899', '0999')).mean(dim='time')"
+    "ctrl_state = ctrl.sel(time=slice('1150', '1200')).groupby('time.month').mean(dim='time').squeeze()\n",
+    "pert_state = pert.sel(time=slice('0949', '0999')).groupby('time.month').mean(dim='time').squeeze()\n",
+    "\n",
+    "ctrl_state['plev'] = ctrl_state['plev']/100\n",
+    "pert_state['plev'] = pert_state['plev']/100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pert_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regridding\n",
+    "\n",
+    "The model output and kernels are not on the same grid, so we will regrid the kernel dataset to the model's grid using the regridding package `xesmf`. For reusability, let's define a function to regrid data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def regrid(ds_in, regrid_to, method='bilinear'):\n",
+    "    regridder = xe.Regridder(ds_in, regrid_to, method=method, periodic=True, ignore_degenerate=True)\n",
+    "    ds_out = regridder(ds_in)\n",
+    "    return ds_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr_kernels = regrid(data_kern, pert_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr_kernels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check that the kernels look as expected:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr_kernels.sw_a.mean(dim='month').plot.contourf(levels=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr_kernels.lw_q.mean(dim=['month', 'lon']).plot.contourf(levels=40, yincrease=False)"
    ]
   },
   {
@@ -313,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Albedo"
+    "### Surface albedo"
    ]
   },
   {
