completed section on energy balance model and feedback definition

--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -86,43 +86,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html). \n"
+    "SOS on font settings and adding links\n",
+    "<div class=\"admonition alert alert-info\">\n",
+    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Info</p>\n",
+    "    For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html) and <p style=\"font-weight:italics\">*Chapter 2 - Global Energy Balance* from *Global Physical Climatology*</p> (Hartmann 2016). \n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine a scenario where we start off with an energy-balanced Earth, where at TOA flux downward to Earth's surface is equal to the TOA flux going out to space. Now if we double the concentration levels of carbon dioxide in the atmopshere - the surface temperature is going to increase through the greenhouse-effect instantaneously. Processes can amplify or dampen the climate response. "
+    "Imagine a scenario where we start off with an energy-balanced Earth, where at top of atmosphere (TOA) flux downward to Earth's surface is equal to the TOA flux going out to space. \n",
+    "\n",
+    "Now if we double the concentration levels of carbon dioxide ($CO_{2}$) in the atmopshere - the surface temperature is going to increase through the greenhouse-effect instantaneously. However, climate processes can amplify or dampen the climate response. For example, the surface may radiate more out to space due to the surface warming, which would dampen the overall warming. On the other hand, there may be more water vapor to absorb the outgoing longwave radiation in the atmosphere due to the increased rate of evaporation from the warming, and thus amplifies the warming. \n",
+    "\n",
+    "To put this into equations, let $R$ be the radiative imbalance, $S_o$ as the solar insolation, $\\alpha$ as the planetary albedo, and together, $S_o/4 (1-\\alpha)$ represents the absorbed solar radiation. OLR is the outgoing longwave radiation. At equilibrium where the incoming flux equals to the outgoing flux, **R** = 0. \n",
+    "\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "R = F_{in} - F_{out}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    " R = S_o/4 (1-\\alpha) - OLR\n",
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The planetary energy balance is typically appoximated at the top of the atmosphere (TOA) by the following: \n",
+    "In this case, the addition of $CO_{2}$ induces a change in the radiative flux at the top of the atmosphere, and is quantified as the raditive forcing F. The climate responds to the radiative imbalance by changing the global mean temperature. We can relate the global mean surface temperature to the external perturbation and the radiative imbalance at TOA by the following equation: \n",
+    "\n",
+    "\n",
     "\\begin{equation*}\n",
     " R = F + \\lambda T\n",
     "\\end{equation*}\n",
     "\n",
-    "where R is the net TOA flux anomaly (positive downward), F is the effective radiative forcing, $\\lambda$ is the feedback parameter, and T is the global mean surface temperature anomaly. \n",
+    "where **R** is the net TOA flux anomaly (positive downward), **F** is the effective radiative forcing, **$\\lambda$** is the feedback parameter, also known as the climate response parameter, and **T** is the global mean **surface** temperature anomaly, relative to the temperature at equilibrium. \n",
     "\n",
+    "Other typical conventions of the same values used within the community: \n",
     "\n",
-    "At equilibrium, R = 0. "
+    "- R = N (e.g. Gregory et al. 2004);\n",
+    "- F = $\\Delta$Q  (e.g. Bony et al. 2006); \n",
+    "- $\\lambda$ = $\\alpha$ (e.g. Gregory et al. 2004);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Radiative Feedback \n",
+    "SOS on font settings and adding links and splitting into paragraphs\n",
+    "<div class=\"admonition alert alert-info\">\n",
+    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Info</p>\n",
+    "    As you explore the feedback-forcing space, you may stumble upon the term climate sensitivity, which is the relationship between the magnitude of the climate change response and the doubling-CO2 forcing, which has the unit in Kelvin. Ch.10 Climate Sensitivity and Feedback Mechanisms in the Global Physical Climatology (Hartmann 2016) provides a holistic overview on the topic, and Sherwood et al. 2020 would provide the most up-to-date understanding on equilibrium climate sensitivity (ECS) within the community. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Radiative Feedback $(\\lambda)$\n",
     "\n",
-    "Feedbacks are listed following [Sherwood et al. 2020](https://doi.org/10.1029/2019RG000678) and [Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1), which are limited to feedbacks that directly affect the top-of-the-atmosphere (TOA) radiation budget, and respond to surface temperature mostly through physical processes\n",
+    "### So, what is a feedback and why does it matter? \n",
     "\n",
-    "How Are Feedbacks Defined? - see Hansen et al. 1984 and Appendix A of Bony et al. 2006\n",
+    "Feedback is the climate system response to an external radaitive forcing (Hansen et al. 1984, Bony et al. 2006). When the global mean surface temperature changes, climate variables may change as well. These climate variable changes would influence the Earth's radiation balance and contribute to the radiative response.  \n",
+    "\n",
+    "Note that feedback is different from the radiative response, where the former has the unit of $Wm^{-2} K^{-1}$ and is quantified by the feedback parameter $\\lambda$, while the latter  has the unit of $Wm^{-2}$, quantified by $\\lambda T$. \n",
+    "\n",
+    "Let x be a vector representing an ensemble of climate variables like atmospheric temperature, water vapor, surface ice and snow. The formal definition of the system's total feedback parameter, which is the strength of the climate system's net feedback, is as follow (Bony et al. 2006): \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\lambda = \\frac{\\partial R}{\\partial T_{s}} = \\sum^{x} \\frac{\\partial R}{\\partial x} \\frac{\\partial x}{\\partial T_{s}} + \\sum \\sum \\frac{\\partial ^{2}R}{\\partial x \\partial y} \\frac{\\partial x \\partial y}{\\partial T_{s}^{2}} + ...\n",
+    "\\end{equation*}\n",
+    "\n",
+    "(source needed for why do this) The net feedback parameter is reduced to the first order (Sherwood et al. 2020): \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\lambda = \\sum^{x}_{i}\\lambda_{i} = \\sum^{x} \\frac{\\partial R}{\\partial x} \\frac{\\partial x}{\\partial T_{s}} \n",
+    "\\end{equation*}\n",
+    "\n",
+    "A positive feedback ($\\lambda > 0$) would make the forced response bigger while a negative feedback ($\\lambda < 0$) stabilizes the forced response. In the following subsections, we will discuss each feedback mechanism in detail on how the mechanism would feed back into enhancing or muting the response. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Types of Feedbacks \n",
+    "\n",
+    "Feedbacks are listed following [Sherwood et al. 2020](https://doi.org/10.1029/2019RG000678) and [Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1), which are limited to feedbacks that directly affect the top-of-the-atmosphere (TOA) radiation budget, and respond to surface temperature mostly through physical processes. \n",
+    "\n",
+    "There may be other feedbacks, but following \n",
+    "\n",
+    "Make plots for each feedback to see how changes in T affects the feedback.\n",
     "\n",
     "\n",
-    "Make plots for each feedback to see how changes in T affects the feedback."
+    "Types of kernels there are: sfc albedo, air temp (vert.varying) , surf temp, LW water vapor kernel, SW water vapor kernel"
    ]
   },
   {
@@ -194,6 +256,8 @@
     "\n",
     "Water vapor feedback and lapse rate feedback are commonly discussed together as they are both dependent on the how much water vapor is present in the atmosphere. \n",
     "\n",
+    "Based on the Clausius-Clapeyron relationship, an increase in atmospheric temperature increases the capacity of air to hold water molecules. The more it warm, the more water the atmosphere can hold and more \n",
+    "\n",
     "Water Vapor Feedback captures the change in outgoing LW and absorbed SW radiation at TOA due to the changes in the atmospheric water vapor concentration. Water droplets would absorb both longwave and shortwave radiation, and thus increase \n",
     "\n",
     "\n",
@@ -227,6 +291,13 @@
    "metadata": {},
    "source": [
     "## Methods to Calculate Raditaive Feedback "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Typically radiative feedback are calculated with global climate models. :O"
    ]
   },
   {
