--- a/notebooks/foundations/theory-rad-feedback.ipynb
+++ b/notebooks/foundations/theory-rad-feedback.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Theory of Radiative Feedbacks\n",
+    "# Mathematical Theory of Radiative Feedbacks\n",
     "\n",
     "Next, title your notebook appropriately with a top-level Markdown header, `#`. Do not use this level header anywhere else in the notebook. Our book build process will use this title in the navbar, table of contents, etc. Keep it short, keep it descriptive. Follow this with a `---` cell to visually distinguish the transition to the prerequisites section."
    ]
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your first content section"
+    "## Radiative Budget Analysis"
    ]
   },
   {
@@ -124,29 +124,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# some subsection code\n",
-    "new = \"helpful information\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Another content subsection\n",
-    "Keep up the good work! A note, *try to avoid using code comments as narrative*, and instead let them only exist as brief clarifications where necessary."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Your second content section\n",
-    "Here we can move on to our second objective, and we can demonstrate"
+    "## Methods of Estimating Cloud Feedbacks\n",
+    "Clouds are generally assumed to be the largest source of uncertainty in the global climate response to radiative forcing. Cloud formation and lifetime is dictated by complex processes occuring at micro- and macro-scale, and their radiative properties depend on the cloud type and optical properties. The nonlinear radiative effects of clouds are thus not suitable for direct calculation by kernels.\n",
+    "\n",
+    "Several methods have evolved to estimate cloud feedbacks. \n",
+    "<a href=\"https://doi.org/10.1175/JCLI3799.1\">Soden and Held (2006)</a> computed the cloud feedback as the residual difference between the effective climate sensitivity and all other feedbacks.<a href=\"https://doi.org/10.1175/2007JCLI2110.1\"> Soden et al. (2008)</a> calculated cloud feedback as a sum of the change in cloud radiative forcing and the difference between the full-sky and clear-sky kernels. However,<a href=\"https://doi.org/10.1175/JCLI-D-11-00248.1\"> Held and Shell (2012) </a> have pointed out that the decomposition of radiative feedbacks into the mechanisms discussed herein is rather arbitrary and proposed the use of tropospheric relative humidity \n",
+    "\n",
+    "\n"
    ]
   },
   {
