--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -115,7 +115,9 @@
     "- SW CRE: Net SW radiation at TOA (down `rsdt` minus up `rsut`) and clear-sky versions (down, which is the same, minus up `rsutcs`)\n",
     "- LW CRE: Net LW radiation at TOA (`rlut`) and the clear-sky version (`rlutcs`)\n",
     "\n",
-    "The cloud feedbacks also require the results from the other feedbacks to correct for noncloud contributions to the CREs."
+    "The cloud feedbacks also require the results from the other feedbacks to correct for noncloud contributions to the CREs.\n",
+    "\n",
+    "We will also need near-surface air temperature (`tas`) for calculating the change in global mean surface temperature (GMST)."
    ]
   },
   {
@@ -127,7 +129,7 @@
    "outputs": [],
    "source": [
     "cat = col.search(activity_id='CMIP', experiment_id=['piControl', 'abrupt-4xCO2'], table_id='Amon', source_id='CESM2', \n",
-    "                 variable_id=['rsus', 'rsds', 'ta', 'ts', 'hus', 'rsdt', 'rsut', 'rsutcs', 'rlut', 'rlutcs'])\n",
+    "                 variable_id=['rsus', 'rsds', 'ta', 'ts', 'hus', 'rsdt', 'rsut', 'rsutcs', 'rlut', 'rlutcs', 'tas'])\n",
     "cat.df"
    ]
   },
@@ -182,7 +184,7 @@
    "source": [
     "### Radiative kernels\n",
     "\n",
-    "We will load in radiative kernels from Project Pythia's storage on JetStream2."
+    "We will load in radiative kernels from Project Pythia's storage on JetStream2. We will be using the ERA5 kernels [(Huang & Huang 2023)](https://essd.copernicus.org/articles/15/3001/2023/)."
    ]
   },
   {
@@ -200,6 +202,15 @@
     "filesTutorial = sorted(fs.glob(patternTutorial))\n",
     "filesetKern = [fs.open(file) for file in filesKern[0:2]]\n",
     "filesetTutorial = [fs.open(file) for file in filesKern[0:2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filesKern"
    ]
   },
   {
@@ -283,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get a general idea of how the climate changes in these runs, we can plot the (12-month rolling) global mean surface temperature for the two runs:"
+    "To get a general idea of how the climate changes in these runs, we can plot the 12-month rolling GMST for the two runs:"
    ]
   },
   {
@@ -292,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmst_ctrl = global_average(ctrl.ts.rolling(time=12, center=True).mean())"
+    "gmst_ctrl = global_average(ctrl.tas.rolling(time=12, center=True).mean())"
    ]
   },
   {
@@ -310,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmst_pert = global_average(pert.ts.rolling(time=12, center=True).mean())"
+    "gmst_pert = global_average(pert.tas.rolling(time=12, center=True).mean())"
    ]
   },
   {
@@ -351,6 +362,23 @@
    "outputs": [],
    "source": [
     "pert_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also need the change in GMST in order to calculate the feedbacks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dgmst = global_average(pert_state.tas - ctrl_state.tas).mean(dim='month')\n",
+    "dgmst.load()"
    ]
   },
   {
@@ -435,6 +463,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The first step is to calculate the change in albedo between the control and perturbed climates. The surface albedo $\\alpha$ is defined as the fraction of downwelling solar radiation at the surface that is reflected back up. That is,\n",
+    "\n",
+    "$$\\alpha=\\frac{S^\\uparrow_\\mathrm{s}}{S^\\downarrow_\\mathrm{s}}=\\frac{\\mathtt{rsus}}{\\mathtt{rsds}}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alb_ctrl = (ctrl_state.rsus/ctrl_state.rsds.where(ctrl_state.rsds > 0)).fillna(0)\n",
+    "alb_pert = (pert_state.rsus/pert_state.rsds.where(ctrl_state.rsds > 0)).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we avoided dividing by zero by masking regions where `rsds` = 0 and filling in the resulting `nan`s with 0. Now, take the difference:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dalb = alb_pert - alb_ctrl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dalb.mean(dim='month').plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By multiplying the change in albedo with the albedo kernel, we get the change in TOA radiation (in units W m$^{-2}$) resulting from that change in albedo:\n",
+    "\n",
+    "$$\\Delta R_\\alpha=K_\\alpha\\cdot\\Delta\\alpha$$\n",
+    "\n",
+    "We also need to multiply by 100 to get albedo as a percentage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSW_alb = regr_kernels.sw_a * dalb * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSW_alb.mean(dim='month').plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The feedback in units W m$^{-2}$ K$^{-1}$ is then calculated by normalizing this change in TOA radiation by the change in GMST:\n",
+    "\n",
+    "$$\\lambda_\\alpha=\\frac{\\Delta R_\\alpha}{\\Delta T_\\mathrm{s}}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alb_feedback = dSW_alb/dgmst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alb_feedback.mean(dim='month').plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Taking the global and annual average, we get a final value of ~0.35 W m$^{-2}$ K$^{-1}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global_average(alb_feedback.mean(dim='month')).load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Temperature"
    ]
   },
@@ -504,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dSWCRE.plot()"
+    "dSWCRE.mean(dim='month').plot()"
    ]
   },
   {
