--- a/notebooks/foundations/theory-rad-feedback.ipynb
+++ b/notebooks/foundations/theory-rad-feedback.ipynb
@@ -4,22 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start here! If you can directly link to an image relevant to your notebook, such as [canonical logos](https://github.com/numpy/numpy/blob/main/doc/source/_static/numpylogo.svg), do so here at the top of your notebook. You can do this with Markdown syntax,\n",
-    "\n",
-    "> `![<image title>](http://link.com/to/image.png \"image alt text\")`\n",
-    "\n",
-    "or edit this cell to see raw HTML `img` demonstration. This is preferred if you need to shrink your embedded image. **Either way be sure to include `alt` text for any embedded images to make your content more accessible.**\n",
-    "\n",
-    "<img src=\"images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Mathematical Theory of Radiative Feedbacks\n",
-    "\n",
-    "Next, title your notebook appropriately with a top-level Markdown header, `#`. Do not use this level header anywhere else in the notebook. Our book build process will use this title in the navbar, table of contents, etc. Keep it short, keep it descriptive. Follow this with a `---` cell to visually distinguish the transition to the prerequisites section."
+    "# Mathematical Theory of Radiative Feedbacks\n"
    ]
   },
   {
@@ -34,13 +19,7 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "If you have an introductory paragraph, lead with it here! Keep it short and tied to your material, then be sure to continue into the required list of topics below,\n",
-    "\n",
-    "1. This is a numbered list of the specific topics\n",
-    "1. These should map approximately to your main sections of content\n",
-    "1. Or each second-level, `##`, header in your notebook\n",
-    "1. Keep the size and scope of your notebook in check\n",
-    "1. And be sure to let the reader know up front the important concepts they'll be leaving with"
+    "This tutorial explains the mathematical theory used in calculating radiative feedbacks."
    ]
   },
   {
@@ -48,11 +27,8 @@
    "metadata": {},
    "source": [
     "## Prerequisites\n",
-    "This section was inspired by [this template](https://github.com/alan-turing-institute/the-turing-way/blob/master/book/templates/chapter-template/chapter-landing-page.md) of the wonderful [The Turing Way](https://the-turing-way.netlify.app) Jupyter Book.\n",
     "\n",
-    "Following your overview, tell your reader what concepts, packages, or other background information they'll **need** before learning your material. Tie this explicitly with links to other pages here in Foundations or to relevant external resources. Remove this body text, then populate the Markdown table, denoted in this cell with `|` vertical brackets, below, and fill out the information following. In this table, lay out prerequisite concepts by explicitly linking to other Foundations material or external resources, or describe generally helpful concepts.\n",
-    "\n",
-    "Label the importance of each concept explicitly as **helpful/necessary**.\n",
+    "The following concepts will be referred or used\n",
     "\n",
     "| Concepts | Importance | Notes |\n",
     "| --- | --- | --- |\n",
