--- a/notebooks/foundations/theory-rad-feedback.ipynb
+++ b/notebooks/foundations/theory-rad-feedback.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Prerequisites\n",
     "\n",
-    "The following concepts will be referred or used\n",
+    "The following concepts will be referred to or explicitly used in this tutorial.\n",
     "\n",
     "| Concepts | Importance | Notes |\n",
     "| --- | --- | --- |\n",
@@ -83,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "# as well as any and all of your code cells\n",
     "print(\"Hello world!\")"
