--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -182,6 +182,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Radiative forcing data\n",
+    "\n",
+    "To calculate the cloud feedback, we will need the effective radiative forcing (ERF) resulting from 4xCO2, which we can find under another project, RFMIP:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_cat = col.search(activity_id='RFMIP', experiment_id='piClim-4xCO2', source_id='CESM2')\n",
+    "rf_cat.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_dset_dict = rf_cat.to_dataset_dict(zarr_kwargs={'consolidated': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forcing = rf_dset_dict['RFMIP.NCAR.CESM2.piClim-4xCO2.Amon.gn']\n",
+    "forcing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Radiative kernels\n",
     "\n",
     "We will load in radiative kernels from Project Pythia's storage on JetStream2. We will be using the ERA5 kernels [(Huang & Huang 2023)](https://essd.copernicus.org/articles/15/3001/2023/)."
@@ -202,6 +240,13 @@
     "filesTutorial = sorted(fs.glob(patternTutorial))\n",
     "filesetKern = [fs.open(file) for file in filesKern[0:2]]\n",
     "filesetTutorial = [fs.open(file) for file in filesKern[0:2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use the more common TOA kernels."
    ]
   },
   {
@@ -226,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_kern = xr.open_dataset(filesetKern[0])\n",
+    "data_kern = xr.open_dataset(filesetKern[1])\n",
     "data_kern['time'] = data_kern['time'] + 1\n",
     "data_kern = data_kern.rename({'time': 'month'})\n",
     "data_kern"
@@ -574,11 +619,6 @@
    "source": [
     "global_average(alb_feedback.mean(dim='month')).load()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
