--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine a scenario where we start off with an energy-balanced Earth, where at top of atmosphere (TOA) flux downward to Earth's surface is equal to the TOA flux going out to space. \n",
+    "Imagine a scenario where we start off with an energy-balanced Earth, where at top of atmosphere (TOA) flux towards Earth's surface is equal to the TOA flux going out to space. \n",
     "\n",
     "Now if we double the concentration levels of carbon dioxide ($CO_{2}$) in the atmopshere - the surface temperature is going to increase through the greenhouse-effect instantaneously. However, climate processes can amplify or dampen the climate response. For example, the surface may radiate more out to space due to the surface warming, which would dampen the overall warming. On the other hand, there may be more water vapor to absorb the outgoing longwave radiation in the atmosphere due to the increased rate of evaporation from the warming, and thus amplifies the warming. \n",
     "\n",
@@ -190,29 +190,7 @@
     "4. Lapse Rate Feedback\n",
     "5. Cloud Feedback\n",
     "\n",
-    "The list above is not exhaustive. Feedbacks like the carbon cycle feedback are not included due to the carbon dioxide level being prescribed for the experimental set-up in Sherwood et al. (2020). Other feedbacks like the atmospheric ozone feedback and stratospheric feedback are not included as they are not normally quantified (Sherwood et al. 2020).\n",
-    "\n",
-    "Types of radiative kernels there are: sfc albedo, air temp (vert.varying) , surf temp, LW water vapor kernel, SW water vapor kernel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3.76065585"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(255**3)*5.67e-8*(-4)"
+    "The list above is not exhaustive. Feedbacks like the carbon cycle feedback are not included due to the carbon dioxide level being prescribed for the experimental set-up in Sherwood et al. (2020). Other feedbacks like the atmospheric ozone feedback and stratospheric feedback are not included as they are not normally quantified (Sherwood et al. 2020)."
    ]
   },
   {
@@ -238,15 +216,22 @@
     "\n",
     "If we include the planetary emissivity $\\epsilon$, we will get $\\lambda_{Planck} \\approx -3.3Wm^{-2}K^{-1}$, which is close to observations (Dessler, 2013) and global climate models (Caldwell et al. 2016). \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "Simply put, the more you heat, the more LW radiation go out.\n",
+    "[TO BE POLISHED]\n",
+    "*Kernel related: structural uncertainty in Planck feedback arises from differences in spatial pattern of surface warming and climatological distribution fo clodus and water vapor that determines planetary emissivity - affects radiative temperature kernel (Sherwood et al 2020). \n",
     "\n",
-    "Extended Read: Planck feedback not necessarily accurately represented in climate models due to lack of stratospheric warming. (Cronin and Dutta 2023)\n",
-    "https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003729\n",
-    "\n",
-    "*Kernel related: structural uncertainty in Planck feedback arises from differences in spatial pattern of surface warming and climatological distribution fo clodus and water vapor that determines planetary emissivity - affects radiative temperature kernel (Sherwood et al 2020) "
+    "Types of radiative kernels there are: sfc albedo, air temp (vert.varying) , surf temp, LW water vapor kernel, SW water vapor kernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SOS on adding links\n",
+    "<div class=\"admonition alert alert-info\">\n",
+    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Extended Read</p>\n",
+    "    Planck feedback not necessarily accurately represented in climate models due to lack of stratospheric warming. [Cronin and Dutta 2023](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003729)\n",
+    "</div>"
    ]
   },
   {
@@ -269,15 +254,13 @@
    "source": [
     "### 3. Water Vapor Feedback: (Positive under warming) \n",
     "\n",
+    "[UNDER CONSTRUCTION]\n",
+    "\n",
     "Water vapor feedback and lapse rate feedback are commonly discussed together as they are both dependent on the how much water vapor is present in the atmosphere. \n",
     "\n",
     "Water vapor feedback is defined as the change in TOA net flux due to the increase in water vapor per degree of surface warming. \n",
     "\n",
-    "Based on the Clausius-Clapeyron relationship, an increase in atmospheric temperature increases the capacity of air to hold water molecules. The more it warm, the more water the atmosphere can hold and more \n",
-    "\n",
-    "Water vapor interacts with both longwave and shortwave radiation.  captures the change in outgoing LW and absorbed SW radiation at TOA due to the changes in the atmospheric water vapor concentration. Water droplets would absorb both longwave and shortwave radiation, and thus increase \n",
-    "\n",
-    "\n",
+    "Water vapor interacts with both longwave and shortwave radiation.  captures the change in outgoing LW and absorbed SW radiation at TOA due to the changes in the atmospheric water vapor concentration. \n",
     "\n",
     "\n",
     "[insert pic of capacity of jar increases as temperature increase]"
@@ -387,7 +370,7 @@
     "- Sherwood et al. 2020\n",
     "- Dessler and Zelinka 2015 (Encyclopedia of Atmospheric Sciences)\n",
     "- Hartmann 2016 (Global Physical Climatology)\n",
-    "- Hansen et al. 1984\n",
+    "- [Hansen et al. 1984](https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/GM029p0130)\n",
     "- Gregory et al. 2004\n",
     "\n",
     "More to come"
