--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -174,7 +174,7 @@
     "\\lambda = \\sum^{x}_{i}\\lambda_{i} = \\sum^{x} \\frac{\\partial R}{\\partial x} \\frac{\\partial x}{\\partial T_{s}} \n",
     "\\end{equation*}\n",
     "\n",
-    "A positive feedback ($\\lambda > 0$) would make the forced response bigger while a negative feedback ($\\lambda < 0$) stabilizes the forced response. In the following subsections, we will discuss each feedback mechanism in detail on how the mechanism would feed back into enhancing or muting the response. \n"
+    "A positive feedback ($\\lambda > 0$) would make the forced response bigger while a negative feedback ($\\lambda < 0$) stabilizes the forced response. In the following subsections, we will discuss each feedback mechanism in detail and how the mechanism would feed back into enhancing or muting the response. \n"
    ]
   },
   {
