--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "### So, what is a feedback and why does it matter? \n",
     "\n",
-    "Feedback is the climate system response to an external radaitive forcing (Hansen et al. 1984, Bony et al. 2006). When the global mean surface temperature changes, climate variables may change as well. These climate variable changes would influence the Earth's radiation balance and contribute to the radiative response.  \n",
+    "Feedback is the climate system response to an external radiative forcing ([Hansen et al. 1984](https://www.researchgate.net/publication/24381215_Climate_Sensitivity_Analysis_of_Feedback_Mechanisms), Bony et al. 2006). When the global mean surface temperature changes, climate variables may change as well. These climate variable changes would influence the Earth's radiation balance and contribute to the radiative response.  \n",
     "\n",
     "Note that feedback is different from the radiative response, where the former has the unit of $Wm^{-2} K^{-1}$ and is quantified by the feedback parameter $\\lambda$, while the latter  has the unit of $Wm^{-2}$, quantified by $\\lambda T$. \n",
     "\n",
