--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -89,7 +89,7 @@
     "SOS on font settings and adding links\n",
     "<div class=\"admonition alert alert-info\">\n",
     "    <p class=\"admonition-title\" style=\"font-weight:bold\">Info</p>\n",
-    "    For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html) and <p style=\"font-weight:italics\">*Chapter 2 - Global Energy Balance* from *Global Physical Climatology*</p> (Hartmann 2016). \n",
+    "    For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html) and <p style=\"font-weight:italics\">[*Chapter 2 - Global Energy Balance*](https://www.sciencedirect.com/science/article/abs/pii/B9780123285317000025) from *Global Physical Climatology* (Hartmann 2016). \n",
     "</div>"
    ]
   },
