--- a/notebooks/foundations/theory-rad-feedback.ipynb
+++ b/notebooks/foundations/theory-rad-feedback.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "## Methods of Estimating Cloud Feedbacks\n",
-    "Clouds are generally assumed to be the largest source of uncertainty in the global climate response to radiative forcing. Cloud formation and lifetime is dictated by complex processes occuring at micro- and macro-scale, and their radiative properties depend on the cloud type and optical properties. The nonlinear radiative effects of clouds are thus not suitable for direct calculation by kernels.\n",
+    "Clouds are generally assumed to be the largest source of uncertainty in the global climate response to radiative forcing. Cloud formation and lifetime are dictated by complex processes occurring at micro and macro-scale, and their radiative properties depend on the cloud type and optical properties. The nonlinear radiative effects of clouds are thus not suitable for direct calculation by kernels.\n",
     "\n",
     "Several methods have evolved to estimate cloud feedbacks. \n",
     "<a href=\"https://doi.org/10.1175/JCLI3799.1\">Soden and Held (2006)</a> computed the cloud feedback as the residual difference between the effective climate sensitivity and all other feedbacks.<a href=\"https://doi.org/10.1175/2007JCLI2110.1\"> Soden et al. (2008)</a> calculated cloud feedback as a sum of the change in cloud radiative forcing and the difference between the full-sky and clear-sky kernels. However,<a href=\"https://doi.org/10.1175/JCLI-D-11-00248.1\"> Held and Shell (2012) </a> have pointed out that the decomposition of radiative feedbacks into the mechanisms discussed herein is rather arbitrary and proposed the use of tropospheric relative humidity \n",
