--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -156,11 +156,11 @@
     "\n",
     "### So, what is a feedback and why does it matter? \n",
     "\n",
-    "Feedback is the climate system response to an external radiative forcing ([Hansen et al. 1984](https://www.researchgate.net/publication/24381215_Climate_Sensitivity_Analysis_of_Feedback_Mechanisms), Bony et al. 2006). When the global mean surface temperature changes, climate variables may change as well. These climate variable changes would influence the Earth's radiation balance and contribute to the radiative response.  \n",
+    "Feedback is the climate system response to an external radiative forcing ([Hansen et al. 1984](https://doi.org/10.1029/GM029p0130), [Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1)). When the global mean surface temperature changes, climate variables may change as well. These climate variable changes would influence the Earth's radiation balance and contribute to the radiative response.  \n",
     "\n",
     "Note that feedback is different from the radiative response, where the former has the unit of $Wm^{-2} K^{-1}$ and is quantified by the feedback parameter $\\lambda$, while the latter  has the unit of $Wm^{-2}$, quantified by $\\lambda T$. \n",
     "\n",
-    "Let x be a vector representing an ensemble of climate variables like atmospheric temperature, water vapor, surface ice and snow. The formal definition of the system's total feedback parameter, which is the strength of the climate system's net feedback, is as follow (Bony et al. 2006): \n",
+    "Let x be a vector representing an ensemble of climate variables like atmospheric temperature, water vapor, surface ice and snow. The formal definition of the system's total feedback parameter, which is the strength of the climate system's net feedback, is as follow ([Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1)): \n",
     "\n",
     "\\begin{equation*}\n",
     "\\lambda = \\frac{\\partial R}{\\partial T_{s}} = \\sum^{x} \\frac{\\partial R}{\\partial x} \\frac{\\partial x}{\\partial T_{s}} + \\sum \\sum \\frac{\\partial ^{2}R}{\\partial x \\partial y} \\frac{\\partial x \\partial y}{\\partial T_{s}^{2}} + ...\n",
@@ -168,7 +168,7 @@
     "\n",
     "(UNDER CONSTRUCTION: source needed for why do this+populate explanation on equation - Dessler and Zelinka 2015 explains it more intuitively, but require conversion from g to $\\lambda$) \n",
     "\n",
-    "The net feedback parameter is reduced to the first order (Sherwood et al. 2020): \n",
+    "The net feedback parameter is reduced to the first order ([Sherwood et al. 2020](https://doi.org/10.1029/2019RG000678)): \n",
     "\n",
     "\\begin{equation*}\n",
     "\\lambda = \\sum^{x}_{i}\\lambda_{i} = \\sum^{x} \\frac{\\partial R}{\\partial x} \\frac{\\partial x}{\\partial T_{s}} \n",
