--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -89,7 +89,7 @@
     "SOS on font settings and adding links\n",
     "<div class=\"admonition alert alert-info\">\n",
     "    <p class=\"admonition-title\" style=\"font-weight:bold\">Info</p>\n",
-    "    For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html) and <p style=\"font-weight:italics\">[*Chapter 2 - Global Energy Balance*](https://www.sciencedirect.com/science/article/abs/pii/B9780123285317000025) from *Global Physical Climatology* (Hartmann 2016). \n",
+    "    For a more comprehensive material about the energy balance model, pokearounds on the energy balance model, and introductions to simpler energy balance models like the two-box model, feel free to check out other resources like the [Climate Laboratory](https://brian-rose.github.io/ClimateLaboratoryBook/courseware/zero-dim-ebm.html) and <p style=\"font-weight:italics\">[*Chapter 2 - Global Energy Balance*] from *Global Physical Climatology* (Hartmann 2016). \n",
     "</div>"
    ]
   },
@@ -208,7 +208,7 @@
     "\\end{equation*}\n",
     "\n",
     "\n",
-    ", where $\\sigma$ is the Stefan-Boltzmann constant ($5.67*10^{-8}$ $  Wm^{-2}K^{-4}$). If everything else is held constant, we can calculate the rate of change of TOA flux due to the change in surface warming by taking the derivative of the Stefan-Boltzmann law. Taking the Earth's average outgoing longwave radiation as 240 $Wm^{−2}$ (e.g., Loeb et al., 2018) for the global effective emission temperature $T_{e}$ as 255K, and substitute it as follow:\\epsilon \n",
+    ", where $\\sigma$ is the Stefan-Boltzmann constant ($5.67*10^{-8}$ $  Wm^{-2}K^{-4}$). If everything else is held constant, we can calculate the rate of change of TOA flux due to the change in surface warming by taking the derivative of the Stefan-Boltzmann law. Taking the Earth's average outgoing longwave radiation as 240 $Wm^{−2}$ (e.g., Loeb et al., 2018) for the global effective emission temperature $T_{e}$ as 255K, and substitute it as follow:\n",
     "\n",
     "\\begin{equation*}\n",
     " -4\\sigma T_e^3 \\approx - 3.76 Wm^{-2}K^{-1}\n",
@@ -230,7 +230,7 @@
     "SOS on adding links\n",
     "<div class=\"admonition alert alert-info\">\n",
     "    <p class=\"admonition-title\" style=\"font-weight:bold\">Extended Read</p>\n",
-    "    Planck feedback not necessarily accurately represented in climate models due to lack of stratospheric warming. [Cronin and Dutta 2023](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003729)\n",
+    "    Planck feedback not necessarily accurately represented in climate models due to lack of stratospheric warming. [Cronin and Dutta 2023]\n",
     "</div>"
    ]
   },
@@ -365,12 +365,12 @@
    "metadata": {},
    "source": [
     "References: \n",
-    "- Bony et al. 2006 https://journals.ametsoc.org/view/journals/clim/19/15/jcli3819.1.xml\n",
+    "- Bony et al. 2006\n",
     "- Zelinka et al. 2020\n",
     "- Sherwood et al. 2020\n",
     "- Dessler and Zelinka 2015 (Encyclopedia of Atmospheric Sciences)\n",
     "- Hartmann 2016 (Global Physical Climatology)\n",
-    "- [Hansen et al. 1984](https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/GM029p0130)\n",
+    "- Hansen et al. 1984\n",
     "- Gregory et al. 2004\n",
     "\n",
     "More to come"
