Removing some "also"s

--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -115,7 +115,7 @@
     "- SW CRE: Net SW radiation at TOA (down `rsdt` minus up `rsut`) and clear-sky versions (down, which is the same, minus up `rsutcs`)\n",
     "- LW CRE: Net LW radiation at TOA (`rlut`) and the clear-sky version (`rlutcs`)\n",
     "\n",
-    "The cloud feedbacks also require the results from the other feedbacks to correct for noncloud contributions to the CREs.\n",
+    "The cloud feedbacks require the results from the other feedbacks to correct for noncloud contributions to the CREs.\n",
     "\n",
     "We will also need near-surface air temperature (`tas`) for calculating the change in global mean surface temperature (GMST)."
    ]
@@ -384,7 +384,7 @@
    "source": [
     "### Calculating the two climate states\n",
     "\n",
-    "Ideally, we would want to compare two equilibrated climates, but since that is usually not possible with standard-length CMIP experiments, we will simply use the monthly climatology over the last 50 years available for each run, which is close enough to equilibrium. The pressure coordinates are also in Pa, so let's convert them to hPa to match the kernels:"
+    "Ideally, we would want to compare two equilibrated climates, but since that is usually not possible with standard-length CMIP experiments, we will simply use the monthly climatology over the last 50 years available for each run, which is close enough to equilibrium. The pressure coordinates are in Pa, so let's convert them to hPa to match the kernels:"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will also need the change in GMST in order to calculate the feedbacks:"
+    "We will need the change in GMST in order to calculate the feedbacks:"
    ]
   },
   {
