Start of temperature feedbacks

--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
+    "<img src=\"../images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>\n",
+    "\n",
+    "<div class=\"admonition alert alert-info\">\n",
+    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Note</p>\n",
+    "    This content is under construction!\n",
+    "</div>"
    ]
   },
   {
@@ -78,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in required data"
+    "## Loading in required data"
    ]
   },
   {
@@ -313,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare data for analysis"
+    "## Preparing data for analysis"
    ]
   },
   {
@@ -494,7 +499,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate feedbacks"
+    "## Calculating feedbacks\n",
+    "\n",
+    "For all noncloud feedbacks, we will calculate both the all-sky and clear-sky (indicated by `clr` in the kernel dataset here) change in TOA radiation $\\Delta R$. To do this, we just use the clear-sky version of the kernel in place of the all-sky kernel. The differences $\\Delta R^\\mathrm{clear}_X-\\Delta R^\\mathrm{all}_X$ for each feedback $X$ will be used to adjust the CREs into proper cloud feedbacks.\n",
+    "\n",
+    "For the feedbacks involving fields that are a function of pressure (i.e., temperature and water vapor), we need to mask out the stratosphere. In this notebook, we will approximate this using a function that masks above 100 hPa at the equator and linearly decreases to 300 hPa at the poles:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tropo_mask(ds):\n",
+    "    return ds.where(ds.plev > ((200/90)*abs(ds.lat) + 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctrl_state.ta.mean(dim=['month', 'lon']).plot(yincrease=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tropo_mask(ctrl_state.ta.mean(dim=['month', 'lon'])).plot(yincrease=False)"
    ]
   },
   {
@@ -565,7 +609,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dSW_alb = regr_kernels.sw_a * dalb * 100"
+    "dSW_alb = regr_kernels.sw_a * dalb * 100\n",
+    "dSW_alb_clr = regr_kernels.swclr_a * dalb * 100"
    ]
   },
   {
@@ -624,8 +669,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Temperature"
+    "### Temperature\n",
+    "\n",
+    "The temperature feedback is decomposed into Planck and lapse rate feedbacks, but first, we calculate the change in TOA LW radiation resulting from changes in surface (`ts`) and air (`ta`) temperature. The first step is calculating the changes in surface and air temperature:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dts = pert_state.ts - ctrl_state.ts\n",
+    "dta = pert_state.ta - ctrl_state.ta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then the change in TOA radiation using the kernels:\n",
+    "\n",
+    "$$\\Delta R_{T_\\mathrm{s}}=K_{T_\\mathrm{s}}\\cdot\\Delta T_\\mathrm{s}$$\n",
+    "$$\\Delta R_T=K_T\\cdot\\Delta T$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dLW_ts = regr_kernels.lw_ts *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
